force-app/main/default/objects/Tech_Plan_de_Pago__c/Tech_Plan_de_Pago__c.object-meta.xml
<CustomObject>
    <label>Plan de Pago</label>
    <nameField>
        <displayFormat>Plan_Pago_{00000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan de Pagos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>