force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Dia_cobro_mensual__c.field-meta.xml
<CustomField>
    <fullName>Dia_cobro_mensual__c</fullName>
    <label>Día de cobro mensual</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>