force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Domiciliacion_activa__c.field-meta.xml
<CustomField>
    <fullName>Domiciliacion_activa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domiciliación activa</label>
    <type>Checkbox</type>
</CustomField>