force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Fecha_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inicio__c</fullName>
    <label>Fecha inicio</label>
    <type>Date</type>
</CustomField>