force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Fianzas__c.field-meta.xml
<CustomField>
    <fullName>Fianzas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fianza</label>
    <referenceTo>Tech_Fianza__c</referenceTo>
    <relationshipLabel>Plan de Pagos</relationshipLabel>
    <relationshipName>Plan_de_Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>