force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Metodo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_Pago__c</fullName>
    <label>Metodo Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Metodo_pago</valueSetName>
    </valueSet>
</CustomField>