force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Monto_total__c.field-meta.xml
<CustomField>
    <fullName>Monto_total__c</fullName>
    <label>Monto total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>