force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Num_recibos__c.field-meta.xml
<CustomField>
    <fullName>Num_recibos__c</fullName>
    <label>Num recibos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>