force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Pendiente_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_Pago__c</fullName>
    <label>Pendiente de Pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>