force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Referencia_domiciliacion__c.field-meta.xml
<CustomField>
    <fullName>Referencia_domiciliacion__c</fullName>
    <label>Referencia domiciliación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>