force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Seguros__c.field-meta.xml
<CustomField>
    <fullName>Seguros__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seguro</label>
    <referenceTo>Seguro__c</referenceTo>
    <relationshipLabel>Plan de Pagos</relationshipLabel>
    <relationshipName>Plan_de_Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>