force-app/main/default/objects/Tech_Plan_de_Pago__c/fields/Ultimos_4_digitos__c.field-meta.xml
<CustomField>
    <fullName>Ultimos_4_digitos__c</fullName>
    <label>Últimos 4 dígitos</label>
    <length>4</length>
    <type>Text</type>
</CustomField>