force-app/main/default/objects/Tech_Plan_de_Pago__c/validationRules/Relacion_Seguro_Fianza.validationRule-meta.xml
<ValidationRule>
    <fullName>Relacion_Seguro_Fianza</fullName>
    <active>true</active>
    <description>Validar que el plan pertenezca a Seguro o Fianza, pero no ambos</description>
    <errorConditionFormula>OR(
    AND(
        ISBLANK(Seguro__c),
        ISBLANK(Fianzas__c)
    ),
    AND(
        NOT(ISBLANK(Seguro__c)),
        NOT(ISBLANK(Fianzas__c))
    )
)</errorConditionFormula>
    <errorMessage>El Plan de Pago debe estar relacionado únicamente con un Seguro o con una Fianza, pero no con ambos ni con ninguno.</errorMessage>
</ValidationRule>